@@ -17,7 +17,7 @@
 
 </td>
 <td width="50%">
-  <p class="top" text-align="RIGHT" align="right">
+  <p class="top" align="right">
   <tt>http://lilypond.org</tt>
   <a href="http://sca.uwaterloo.ca/lilypond/lilypond.org/web/">
     <tt>.ca</tt>
@@ -37,7 +37,7 @@
   <span class="top">... music notation for everyone</span>
   <br>
   <br>
-  <img src="@IMAGES@monet-fragment.jpeg">
+  <img src="@IMAGES@monet-fragment.jpeg" alt="monet-waterlilies">
 </h1>
 
 <table class="news">
@@ -154,32 +154,35 @@
     </td>
   </tr>
 
-  
 </table>
 
 <br>
 
-<nobr>
-  <form action="http://www.google.com/search"
-        align="center"
-	method="get"
-	name="f_lily_google"
-	language="JavaScript"
-	onSubmit="f_lily_google.q.value='site:www.lilypond.org '
-		  + f_lily_google.brute_query.value"
-	onMouseMove="f_lily_google.q.value='site:www.lilypond.org '
-		     + f_lily_google.brute_query.value"
-	onKeyUp="f_lily_google.q.value='site:www.lilypond.org '
-		 + f_lily_google.brute_query.value">
+<form action="http://www.google.com/search"
+      method="get"
+      name="f_lily_google"
+      onSubmit="f_lily_google.q.value='site:www.lilypond.org '
+		+ f_lily_google.brute_query.value"
+      onMouseMove="f_lily_google.q.value='site:www.lilypond.org '
+		   + f_lily_google.brute_query.value"
+      onKeyUp="f_lily_google.q.value='site:www.lilypond.org '
+	       + f_lily_google.brute_query.value">
     <input name="btnG" type="hidden" value="Google Search">
-    <input type="text" framewidth="4" name="brute_query" size="40">
+    <input type="text" name="brute_query" size="40">
     <input type="hidden" name="q" value=" ">
     <input type="submit" value="Search lilypond.org">
-  </form>
-</nobr>
+</form>
 
-<br><br>
+<br>
 <p align="right">
-  Thanks to  <a href="http://www.webdev.nl">webdev.nl</a> for
+  <a href="http://validator.w3.org/check?uri=referer">
+    <img border="0"
+         src="http://www.w3.org/Icons/valid-html401"
+         alt="Valid HTML 4.01!" height="15" width="44"></a>
+</p>
+<br>
+<p align="right">
+  Thanks to <a href="http://www.webdev.nl">webdev.nl</a> for
   hosting <tt>lilypond.org</tt>
 </p>
+
